# fastapi-learn

./: .env  pyproject.toml
app/: decorator_learn.py  dependencies.py  main.py
app/configs/: app_config.py  db_config.py  schedule_config.py
app/decorators/: async_task.py
app/exceptions/: exception.py  global_exception_handler.py  problem_details.py
app/middlewares/: jwt_middleware.py
app/models/: shipment.py  user.py
app/repos/: shipment_repo.py  user_repo.py
app/routers/: auth.py  health.py  shipment.py  user.py
app/schemas/: auth.py  shipment.py  user.py
app/services/: auth_service.py  shipment_service.py  user_service.py
app/utils/: bcrypt_util.py  date_utils.py  jwt_util.py  logger.py
